[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/PNG/White/2x/arrowUp.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Notes/NoteSlot.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 56 )

[node name="NoteSlot" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
emitting = false
amount = 15
one_shot = true
process_material = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="HitSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Sprite/Area2D" to="." method="_on_Area2D_area_exited"]
